Fix main content spacing

--- a/style/index.css
+++ b/style/index.css
@@ -55,7 +55,7 @@ main {
     background-color: var(--dark-grey);
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 6fr 0.5fr;
+    grid-template-rows: 0.75fr 6fr;
     row-gap: calc(var(--default-font-size)*0.5);
     justify-items: center;
     align-items: end;
